--- a/signaltest-web/package.json
+++ b/signaltest-web/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "axios": "^0.19.2",
     "vue": "^2.5.2",
+    "vue-layer": "^1.1.7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "koa2-cors": "^2.0.6",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
